# reversi

./: CMakeLists.txt  Readme.md  config.h.in  readme.txt
include/: Config.h
include/builder/: IterativeDeepening.h  MTDf.h  MTDf3.h  ParallelAlphaBetaTreeBuilder.h  ParallelTreeBuilder.h  TreeBuilder.h
include/othello/: AlphaBetaOthelloTree.h  AlphaBetaOthelloTree_.h  Game.h  GameRegistry.h  OthelloAlphaBetaTreeBuilder.h  OthelloBoard.h  OthelloParallelTreeBuilder.h  OthelloTree.h  SimpleOthelloTreeBuilder.h  Zobrist.h
include/othello/eval/: EvalStrategy.h  EvaluationStrategy.h  GEvaluationStrategy.h  SEvaluationStrategy.h  TreeEvaluationStrategy.h
include/othello/player/: AlphaBetaOthelloPlayer.h  GPlayer.h  HumanPlayer.h  JSPlayer.h  MTDf3Player.h  MTDfPlayer.h  OthelloPlayer.h  Player.h  S2Player.h  S3Player.h  SPlayer.h
include/test/: TestTreeBuilder.h
include/tree/: DepthFirstVisitor.h  Tree.h  TreeLevelVisitor.h  TreeVisitor.h
include/util/: RandomEngineHelper.h  ThreadsafeQueue.h  Util.h
main/: PlayOthello.cpp
src/: Config.cpp
src/builder/: IterativeDeepening.cpp  MTDf.cpp  ParallelAlphaBetaTreeBuilder.cpp  TreeBuilder.cpp
src/othello/: AlphaBetaOthelloTree.cpp  Game.cpp  GameRegistry.cpp  OthelloAlphaBetaTreeBuilder.cpp  OthelloBoard.cpp  OthelloParallelTreeBuilder.cpp  OthelloTree.cpp  SimpleOthelloTreeBuilder.cpp  Zobrist.cpp
src/othello/eval/: EvalStrategy.cpp  EvaluationStrategy.cpp  GEvaluationStrategy.cpp  SEvaluationStrategy.cpp  TreeEvaluationStrategy.cpp
src/othello/player/: GPlayer.cpp  HumanPlayer.cpp  JSPlayer.cpp  Player.cpp
src/test/: TestTreeBuilder.cpp
src/tree/: DepthFirstVisitor.cpp  Tree.cpp  TreeLevelVisitor.cpp  TreeVisitor.cpp
src/util/: ThreadsafeQueue.cpp  Util.cpp
